@@ -1,5 +1,7 @@
 package com.nirima.jenkins.plugins.docker;
 
+import static com.cloudbees.plugins.credentials.CredentialsScope.SYSTEM;
+
 import com.cloudbees.plugins.credentials.CredentialsProvider;
 import com.cloudbees.plugins.credentials.CredentialsStore;
 import com.cloudbees.plugins.credentials.common.UsernamePasswordCredentials;
@@ -7,18 +9,18 @@ import com.cloudbees.plugins.credentials.domains.Domain;
 import com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl;
 import com.nirima.jenkins.plugins.docker.strategy.DockerOnceRetentionStrategy;
 import hudson.model.Node;
+import hudson.util.Secret;
 import io.jenkins.docker.client.DockerAPI;
 import io.jenkins.docker.connector.DockerComputerAttachConnector;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import org.jenkinsci.plugins.docker.commons.credentials.DockerServerCredentials;
 import org.jenkinsci.plugins.docker.commons.credentials.DockerServerEndpoint;
 import org.junit.Assert;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.JenkinsRule;
-
-import java.util.Collections;
-
-import static com.cloudbees.plugins.credentials.CredentialsScope.SYSTEM;
 
 /**
  * @author Kanstantsin Shautsou
@@ -28,16 +30,18 @@ public class DockerCloudTest {
     @Rule
     public JenkinsRule jenkins = new JenkinsRule();
 
+    @SuppressWarnings("unused")
     @Test
     public void testConstructor_0_10_2() {
-        new DockerCloud("name",
-                Collections.<DockerTemplate>emptyList(), //templates
-                "http://localhost:4243", //serverUrl
-                100, //containerCap,
+        new DockerCloud(
+                "name",
+                List.of(), // templates
+                "http://localhost:4243", // serverUrl
+                100, // containerCap,
                 10, // connectTimeout,
                 10, // readTimeout,
                 null, // credentialsId,
-                null, //version
+                null, // version
                 null); // dockerHostname
     }
 
@@ -45,27 +49,55 @@ public class DockerCloudTest {
     public void globalConfigRoundtrip() throws Exception {
 
         // Create fake credentials, so they are selectable on configuration for during configuration roundtrip
-        final CredentialsStore store = CredentialsProvider.lookupStores(jenkins.getInstance()).iterator().next();
-        DockerServerCredentials dc = new DockerServerCredentials(SYSTEM, "credentialsId", "test", null, null, null);
+        final CredentialsStore store = CredentialsProvider.lookupStores(jenkins.getInstance())
+                .iterator()
+                .next();
+        DockerServerCredentials dc =
+                new DockerServerCredentials(SYSTEM, "credentialsId", "test", (Secret) null, null, null);
         store.addCredentials(Domain.global(), dc);
-        UsernamePasswordCredentials rc = new UsernamePasswordCredentialsImpl(SYSTEM, "pullCredentialsId", null, null, null);
+        UsernamePasswordCredentials rc =
+                new UsernamePasswordCredentialsImpl(SYSTEM, "pullCredentialsId", null, null, null);
         store.addCredentials(Domain.global(), rc);
 
+        final DockerTemplateBase templateBase = new DockerTemplateBase(
+                "image",
+                "pullCredentialsId",
+                "dnsString",
+                "network",
+                "dockerCommand",
+                "mountsString",
+                "volumesFromString",
+                "environmentString",
+                "hostname",
+                "user1",
+                "",
+                128,
+                256,
+                0L,
+                0L,
+                42,
+                102,
+                "bindPorts",
+                true,
+                true,
+                true,
+                "macAddress",
+                "extraHostsString");
+        templateBase.setCapabilitiesToAddString("SYS_ADMIN");
+        templateBase.setCapabilitiesToDropString("CHOWN");
+        templateBase.setSecurityOptsString("seccomp=unconfined");
         final DockerTemplate template = new DockerTemplate(
-                new DockerTemplateBase("image", "pullCredentialsId", "dnsString", "network",
-                        "dockerCommand", "volumesString", "volumesFromString", "environmentString",
-                        "hostname", 128, 256, 42, 102, "bindPorts", true, true, true, "macAddress", "extraHostsString"),
-                new DockerComputerAttachConnector("jenkins"),
-                "labelString", "remoteFs", "10");
+                templateBase, new DockerComputerAttachConnector("jenkins"), "labelString", "remoteFs", "10");
         template.setPullStrategy(DockerImagePullStrategy.PULL_NEVER);
         template.setMode(Node.Mode.NORMAL);
         template.setRemoveVolumes(true);
+        template.setStopTimeout(42);
         template.setRetentionStrategy(new DockerOnceRetentionStrategy(33));
 
-        DockerCloud cloud = new DockerCloud("docker", new DockerAPI(new DockerServerEndpoint("uri", "credentialsId")),
-                Collections.singletonList(template));
+        DockerCloud cloud = new DockerCloud(
+                "docker", new DockerAPI(new DockerServerEndpoint("uri", "credentialsId")), List.of(template));
 
-        jenkins.getInstance().clouds.replaceBy(Collections.singleton(cloud));
+        jenkins.getInstance().clouds.replaceBy(Set.of(cloud));
 
         jenkins.configRoundtrip();
 
@@ -81,8 +113,10 @@ public class DockerCloudTest {
         final DockerCloud c2 = new DockerCloud("cloud2." + uniqueId, null, null);
 
         assertCount(c1, c2, i1, i2, 0, 0, 0, 0);
-        Assert.assertEquals("DockerCloud.CONTAINERS_IN_PROGRESS is empty to start with",
-                DockerCloud.CONTAINERS_IN_PROGRESS, Collections.EMPTY_MAP);
+        Assert.assertEquals(
+                "DockerCloud.CONTAINERS_IN_PROGRESS is empty to start with",
+                DockerCloud.CONTAINERS_IN_PROGRESS,
+                Map.of());
 
         c1.incrementContainersInProgress(i1);
         assertCount(c1, c2, i1, i2, 1, 0, 0, 0);
@@ -101,12 +135,19 @@ public class DockerCloudTest {
         assertCount(c1, c2, i1, i2, 0, 0, 1, 0);
         c2.decrementContainersInProgress(i1);
         assertCount(c1, c2, i1, i2, 0, 0, 0, 0);
-        Assert.assertEquals("DockerCloud.CONTAINERS_IN_PROGRESS is empty afterwards",
-                DockerCloud.CONTAINERS_IN_PROGRESS, Collections.EMPTY_MAP);
+        Assert.assertEquals(
+                "DockerCloud.CONTAINERS_IN_PROGRESS is empty afterwards", DockerCloud.CONTAINERS_IN_PROGRESS, Map.of());
     }
 
-    private static void assertCount(DockerCloud c1, DockerCloud c2, DockerTemplate i1, DockerTemplate i2, int c1i1,
-            int c1i2, int c2i1, int c2i2) {
+    private static void assertCount(
+            DockerCloud c1,
+            DockerCloud c2,
+            DockerTemplate i1,
+            DockerTemplate i2,
+            int c1i1,
+            int c1i2,
+            int c2i1,
+            int c2i2) {
         final int c1All = c1i1 + c1i2;
         final int c2All = c2i1 + c2i2;
         final String state = "when c1(" + c1i1 + "," + c1i2 + "), c2(" + c2i1 + "," + c2i2 + "), ";
